sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:4: error: ')' expected but ',' found.
  for (i <- 0 to n - 1, -1) {
                      ^AlgBubbleSort1:11: error: illegal start of simple expression
} 
^